# elrond-naming-system

xnames-contracts/: .gitignore  Cargo.toml
xnames-contracts/common/: Cargo.toml
xnames-contracts/common/src/: lib.rs
xnames-contracts/price_oracle/: Cargo.toml
xnames-contracts/price_oracle/mandos/: price_oracle.scen.json
xnames-contracts/price_oracle/meta/: Cargo.toml
xnames-contracts/price_oracle/meta/src/: main.rs
xnames-contracts/price_oracle/src/: lib.rs
xnames-contracts/price_oracle/tests/: empty_mandos_rs_test.rs  empty_rust_test.rs
xnames-contracts/price_oracle/wasm/: Cargo.toml
xnames-contracts/price_oracle/wasm/src/: lib.rs
xnames-contracts/xn-nft/: Cargo.toml
xnames-contracts/xn-nft/mandos/: buy_nft.scen.json  create_nft.scen.json  init.scen.json
xnames-contracts/xn-nft/meta/: Cargo.toml
xnames-contracts/xn-nft/meta/src/: main.rs
xnames-contracts/xn-nft/src/: authority.rs  lib.rs  nft_module.rs  structs.rs
xnames-contracts/xn-nft/wasm/: Cargo.toml
xnames-contracts/xn-nft/wasm/src/: lib.rs
