[package]
name = "price_oracle"
version = "0.0.0"
authors = [ "Tarun Jaiswal <tarunjais28@gmail.com>"]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[dev-dependencies]
num-bigint = "0.4.2"

[dependencies.elrond-wasm]
version = "0.37.0"
features = ["esdt-token-payment-legacy-decode",]

[dev-dependencies.elrond-wasm-debug]
version = "0.37.0"

[dependencies.common]
path = "../common"

